--- a/css/estilo.css
+++ b/css/estilo.css
@@ -214,6 +214,96 @@
     line-height: 1.5;
   }
 
+  .trabss img:hover{
+    -ms-transform:rotate(-10deg);
+    -webkit-transform:rotate(-10deg);
+    -moz-transform:rotate(-10deg);
+    -o-transform:rotate(-10deg);
+    transform:rotate(-10deg);
+  }
+  .trab img{
+    border:10px groove #4169E1;
+  }
+
+  /*
+  hobby
+  */
+
+  #hobby {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 100%;
+  }
+  #hobby h2{
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-size: 2em;
+    text-align: center;
+  }
+  .hobby{
+    width: 80%;
+    align-items: center;
+    text-align: center;
+  }
+  .hobby h3{
+    font-size: 1.5em;
+    margin-top: 30px;
+    margin-bottom: 14px;
+  }
+  /*
+  contato
+  */
+  #Contato {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: #CAE1FF;
+    width: 100%;
+  }
+  #Contato h2{
+    margin-left: 20px;
+    margin-width:20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    font-size: 2em;
+    text-align: center;
+    color: #4169E1;
+  }
+  #Contato > p{
+    margin-bottom: 20px;
+    font-size: 1.2em;
+    color: #4169E1;
+    text-align: center;
+  }
+  #Contato a{
+    text-decoration: none;
+    color: #4169E1;
+    font-family: "Gochi Hand","Helvetica","Arial", sans-serif;
+    text-align: center;
+  }
+  }
+
+#contato img{
+  width: 10%;
+}
+  /*
+  FOOTER
+  */
+
+  footer {
+    text-align: center;
+    width: 100%;
+    background-color: #4169E1;
+    color: #f1f1f1;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
 
 
 
@@ -320,6 +410,24 @@
   }
   #Competencias .comp{
     width: 33.3333333333%;
+    text-align: center;
+  }
+  /*
+  Contato
+  */
+  #Contato {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    max-width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    max-height: 40vh;
+    width: 100%;
+  }
+  #Contato h2
+  #Contato p{
+    width: 100%;
     text-align: center;
   }
 
